--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,9 +1,3 @@
-/* small */
-
-
-/* @media(min-width:768px){} */
-
-
 /* UTILITY */
 
 .inline-block {
@@ -27,6 +21,11 @@
     padding-right: 1rem;
 }
 
+.py-10 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
 .py-20 {
     padding-top: 2rem;
     padding-bottom: 2rem;
@@ -44,8 +43,8 @@
     margin-bottom: 24px;
 }
 
-.mt-90 {
-    margin-top: 9rem;
+.mt-60 {
+    margin-top: 6rem;
 }
 
 .mt-20 {
@@ -114,6 +113,11 @@ body {
 
 .container {
     max-width: 720px;
+}
+
+.navbar-toggle {
+    background-color: #1ABC9C;
+    border-color: #1ABC9C !important;
 }
 
 #jumbotron img {
@@ -207,9 +211,11 @@ body {
     padding: 4rem 0;
 }
 
-.form-control {
+.form-control::placeholder {
     padding: 0;
     color: rgb(73, 80, 87);
+    opacity: .7;
+    font-size: 24px;
 }
 
 #contact-me form button {
@@ -218,8 +224,9 @@ body {
     border: 0;
 }
 
-#contact-me form button:hover {
-    background-color: #239981;
+#contact-me form button:hover,
+.navbar-toggle:hover {
+    background-color: #239981 !important;
 }
 
 footer i {
@@ -238,7 +245,7 @@ footer .copiright {
 
 /* medium */
 
-@media(min-width:992px) {
+@media all and (min-width:992px) {
     .container {
         max-width: 960px;
     }
@@ -258,6 +265,9 @@ footer .copiright {
     }
     .txt-size-md-48 {
         font-size: 48px !important;
+    }
+    .navbar-toggle {
+        display: none;
     }
 }
 
